[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scene/menu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/Options_Menu_Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scene/Buttons/BackButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scene/menu/FadeIn.tscn" type="PackedScene" id=4]

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Pause" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackGround" type="ColorRect" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -640.0
margin_bottom = -360.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 2 )
text = "Paused Menu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" parent="Pause" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -30.0
margin_right = 240.0
margin_bottom = 30.0

[node name="FadeIn" parent="." instance=ExtResource( 4 )]
margin_left = -640.0
margin_top = -720.0
margin_right = -640.0
margin_bottom = -720.0
rect_scale = Vector2( 2, 2 )
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
